[gd_scene load_steps=3 format=3 uid="uid://c33skpvxtqmra"]

[ext_resource type="Script" uid="uid://bbqu8r7bxve6h" path="res://Scripts/Main Menu/main_menu_master.gd" id="1_msi6g"]
[ext_resource type="Theme" uid="uid://1kr4fl0cxyvy" path="res://Resources/ButtonTheme.tres" id="2_04wfc"]

[node name="MainMenuMaster" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_msi6g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = 1285.0
offset_bottom = 718.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_04wfc")
theme_type_variation = &"FlatButton"
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_04wfc")
theme_type_variation = &"FlatButton"
text = "Options"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_04wfc")
theme_type_variation = &"FlatButton"
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_04wfc")
theme_type_variation = &"FlatButton"
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
